--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 id="estado" ></h1>
     <h3 id="infor"></h3>
     <h2 id="valor"></h2>
-
+    <!-- Formatação de data -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" integrity="sha512-rmZcZsyhe0/MAjquhTgiUcb4d9knaFc7b5xAfju483gbEXTkeJRUMIPk6s3ySZMYUHEcjKbjLjyddGWMrNEvZg==" crossorigin="anonymous"></script>
     <script>
         fetch('https://visao.ibict.br/api/indicatorsMostRecentYear?&groupId.equals=325')
